# egui-audio

./: .editorconfig  .rustfmt.toml  Cargo.toml  Readme.md
src/: as_scaled.rs  atomic_wrapper.rs  db_wrapper.rs  envelope.rs  fader.rs  knob.rs  lib.rs  main.rs  time_cursor.rs  util.rs  waveform.rs
src/waveform/: waveform_data.rs  waveform_mipmap.rs  waveform_spectrum.rs
